[package]
name = "arduino-uno-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"
embedded-storage = "0.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e29a7be5b1fa9d490ded11e539d345af041ccef6"
features = ["arduino-uno"]

[dependencies.avr-device]
version = "0.5.1"

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.void]
version = "*"
default-features = false
